Fix card on mobile and add hover shadow

--- a/src/components/event-list/style.scss
+++ b/src/components/event-list/style.scss
@@ -26,6 +26,10 @@
       max-width: $spacer*30;
       display: inline-block;
 
+      &:hover .card {
+        box-shadow: 0 0 0 1px #D4D4D5, 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15), 0 2px 0 0 #F2711C;
+      }
+
       .header {
         overflow: hidden;
       }
@@ -77,7 +81,6 @@
           overflow: hidden;
         }
       }
-
     }
 
     .EventListArrow {
@@ -142,7 +145,8 @@
       .EventListItem {
         width: 100%;
 
-        &-background {
+        &-background,
+        &-background.image img {
           height: $spacer*16;
         }
 
